# notification_eventhandler

./: README.en.md  README.md  README_zh.md  bundle.json  eventhandler.gni
.gitee/: CODEOWNERS  PULL_REQUEST_TEMPLATE.zh-CN.md
frameworks/: BUILD.gn
frameworks/ani/: BUILD.gn
frameworks/ani/ets/: @ohos.events.emitter.ets
frameworks/ani/event_emitter/: BUILD.gn  event_emitter_config.json
frameworks/ani/event_emitter/ets/: @ohos.events.emitter.ets
frameworks/ani/event_emitter/include/: ani.h  sts_events_emitter.h
frameworks/ani/event_emitter/src/: sts_events_emitter.cpp
frameworks/ani/include/: sts_events_emitter.h
frameworks/ani/src/: sts_events_emitter.cpp
frameworks/cj/: BUILD.gn
frameworks/cj/src/: emitter.cpp  emitter.h  emitter_common.h  emitter_ffi.cpp  emitter_ffi.h  emitter_log.h  event_handler_impl.h
frameworks/emitter/: BUILD.gn
frameworks/emitter/ani/: BUILD.gn
frameworks/emitter/ani/ets/: @ohos.events.emitter.ets  @ohos.events.json.ets
frameworks/emitter/ani/include/: ani_emitter.h  ani_serialize.h  sts_events_json_common.h
frameworks/emitter/ani/src/: ani_emitter.cpp  ani_serialize.cpp  sts_events_json_common.cpp
frameworks/emitter/base/: BUILD.gn
frameworks/emitter/base/include/: ani_async_callback_manager.h  ani_deserialize.h  aync_callback_manager.h  composite_event.h  eventhandler_emitter.h  napi_async_callback_manager.h  napi_deserialize.h  serialize.h
frameworks/emitter/base/src/: ani_async_callback_manager.cpp  ani_deserialize.cpp  async_callback_manager.cpp  eventhandler_emitter.cpp  napi_async_callback_manager.cpp  napi_deserialize.cpp
frameworks/emitter/napi/: BUILD.gn
frameworks/emitter/napi/include/: napi_agent.h  napi_emitter.h  napi_serialize.h
frameworks/emitter/napi/src/: init.cpp  napi_emitter.cpp  napi_serialize.cpp
frameworks/eventhandler/: BUILD.gn  inner_api_sources.gni  libeventhandler.versionscript
frameworks/eventhandler/include/: async_stack_adapter.h  daemon_epoll_io_waiter.h  deamon_io_waiter.h  epoll_io_waiter.h  event_handler_utils.h  event_hitrace_meter_adapter.h  event_inner_runner.h  event_queue_base.h  event_queue_ffrt.h  frame_report_sched.h  io_waiter.h  local_handle_adapter.h  none_io_waiter.h  priority_inheritance_lock.h  std_lock.h  thread_local_data.h
frameworks/eventhandler/src/: async_stack_adapter.cpp  daemon_epoll_io_waiter.cpp  deamon_io_waiter.cpp  epoll_io_waiter.cpp  event_handler.cpp  event_queue.cpp  event_queue_base.cpp  event_queue_ffrt.cpp  event_runner.cpp  ffrt_descriptor_listener.cpp  file_descriptor_listener.cpp  frame_report_sched.cpp  inner_event.cpp  local_handle_adapter.cpp  native_implement_eventhandler.cpp  none_io_waiter.cpp
frameworks/eventhandler/test/: BUILD.gn
frameworks/eventhandler/test/unittest/: lib_event_epoll_io_waiter_test.cpp  lib_event_handler_checker_test.cpp  lib_event_handler_event_queue_test.cpp  lib_event_handler_event_runner_test.cpp  lib_event_handler_event_test.cpp  lib_event_handler_inner_event_test.cpp  lib_event_handler_test.cpp  lib_event_handler_trace_test.cpp  lib_frame_report_sched_test.cpp
frameworks/napi/: BUILD.gn  libemitter.map
frameworks/napi/include/: events_emitter.h  interops.h
frameworks/napi/src/: events_emitter.cpp  init.cpp  interops.cpp
frameworks/native/: BUILD.gn
frameworks/native/src/: native_interface_eventhandler.cpp
frameworks/test/moduletest/: BUILD.gn  event_handler_fd_listener_module_test.cpp  event_handler_post_task_module_test.cpp  event_handler_press_module_test.cpp  event_handler_send_event_module_test.cpp  event_handler_send_sync_event_module_test.cpp  event_handler_send_timing_event_module_test.cpp  event_handler_set_get_remove_module_test.cpp  event_handler_test_common.cpp  event_handler_test_common.h
interfaces/inner_api/: dumper.h  event_handler.h  event_handler_errors.h  event_logger.h  event_queue.h  event_runner.h  file_descriptor_listener.h  inner_event.h  lock_base.h  logger.h  native_implement_eventhandler.h
interfaces/kits/native/: native_interface_eventhandler.h
test/fuzztest/: BUILD.gn
test/fuzztest/epolliowaiter_fuzzer/: BUILD.gn  epolliowaiter_fuzzer.cpp  epolliowaiter_fuzzer.h
test/fuzztest/eventhandler_fuzzer/: BUILD.gn  eventhandler_fuzzer.cpp  eventhandler_fuzzer.h
test/fuzztest/eventhandlerannex_fuzzer/: BUILD.gn  eventhandlerannex_fuzzer.cpp  eventhandlerannex_fuzzer.h
test/fuzztest/eventqueue_fuzzer/: BUILD.gn  eventqueue_fuzzer.cpp  eventqueue_fuzzer.h
test/fuzztest/eventqueueannex_fuzzer/: BUILD.gn  eventqueueannex_fuzzer.cpp  eventqueueannex_fuzzer.h
test/fuzztest/eventqueueinsert_fuzzer/: BUILD.gn  eventqueueinsert_fuzzer.cpp  eventqueueinsert_fuzzer.h
test/fuzztest/eventrunner_fuzzer/: BUILD.gn  eventrunner_fuzzer.cpp  eventrunner_fuzzer.h
test/fuzztest/filedescriptorlistener_fuzzer/: BUILD.gn  filedescriptorlistener_fuzzer.cpp  filedescriptorlistener_fuzzer.h
test/fuzztest/innerevent_fuzzer/: BUILD.gn  innerevent_fuzzer.cpp  innerevent_fuzzer.h
test/fuzztest/nativeimplementeventhandler_fuzzer/: BUILD.gn  nativeimplementeventhandler_fuzzer.cpp  nativeimplementeventhandler_fuzzer.h
test/fuzztest/noneiowaiter_fuzzer/: BUILD.gn  noneiowaiter_fuzzer.cpp  noneiowaiter_fuzzer.h
test/systemtest/: BUILD.gn
test/systemtest/ems_dumper_system_test/: BUILD.gn  ems_dumper_system_test.cpp
test/systemtest/ems_event_handler_system_test/: BUILD.gn  ems_event_handler_test.cpp
test/systemtest/ems_event_queue_system_test/: BUILD.gn  ems_event_queue_system_test.cpp
test/systemtest/ems_event_runner_system_test/: BUILD.gn  ems_event_runner_system_test.cpp
test/systemtest/ems_inner_event_system_test/: BUILD.gn  ems_inner_event_system_test.cpp
test/systemtest/ems_logger_system_test/: BUILD.gn  ems_logger_system_test.cpp
