# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("../../eventhandler.gni")

ohos_shared_library("eventEmitter") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  include_dirs = [
    "${frameworks_path}/emitter/ani/include",
    "${frameworks_path}/emitter/napi/include",
    "${frameworks_path}/emitter/base/include",
  ]

  sources = [
    "${frameworks_path}/emitter/ani/src/ani_emitter.cpp",
    "${frameworks_path}/emitter/ani/src/ani_serialize.cpp",
    "${frameworks_path}/emitter/base/src/ani_async_callback_manager.cpp",
    "${frameworks_path}/emitter/base/src/ani_deserialize.cpp",
    "${frameworks_path}/emitter/base/src/async_callback_manager.cpp",
    "${frameworks_path}/emitter/base/src/napi_async_callback_manager.cpp",
    "${frameworks_path}/emitter/napi/src/napi_emitter.cpp",
    "${frameworks_path}/emitter/napi/src/napi_serialize.cpp",
  ]

  deps = [
    "${frameworks_path}/eventhandler:libeventhandler",
    "${frameworks_path}/napi:emitter_interops",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "napi:ace_napi",
    "runtime_core:ani",
    "runtime_core:ani_helpers",
  ]

  subsystem_name = "notification"
  part_name = "eventhandler"
}

generate_static_abc("event_emitter_abc") {
  base_url = "${frameworks_path}/emitter/ani/ets"
  files = [ "${frameworks_path}/emitter/ani/ets/@ohos.events.emitter.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/event_emitter_abc.abc"
}

ohos_prebuilt_etc("event_emitter_abc_etc") {
  source = "$target_out_dir/event_emitter_abc.abc"
  module_install_dir = "framework"
  subsystem_name = "notification"
  part_name = "eventhandler"
  deps = [ ":event_emitter_abc" ]
}
