# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")
import("../../../eventhandler.gni")

ohos_shared_library("eventEmitter") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  include_dirs = [
    "include",
    "${inner_api_path}",
  ]

  sources = [ "src/sts_events_emitter.cpp" ]

  deps = [ "${frameworks_path}/eventhandler:libeventhandler" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "runtime_core:ani",
  ]

  subsystem_name = "notification"
  part_name = "eventhandler"
}

generate_static_abc("event_emitter_abc") {
  base_url = "./ets"
  files = [ "./ets/@ohos.events.emitter.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/event_emitter_abc.abc"
}

ohos_prebuilt_etc("event_emitter_abc_etc") {
  source = "$target_out_dir/event_emitter_abc.abc"
  module_install_dir = "framework"
  subsystem_name = "notification"
  part_name = "eventhandler"
  deps = [ ":event_emitter_abc" ]
}
